# Buyer-matchingSystem

./: .env.example  .gitignore  Makefile  README.md  aiプレゼン自動スクリーニング_完全設計仕様.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  evaluations.py  proposals.py  summaries.py  supplier.py
backend/app/core/: __init__.py  exceptions.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  comment.py  enums.py  evaluation.py  organization.py  point.py  proposal.py  user.py
backend/app/schemas/: __init__.py  common.py  proposal.py  user.py
backend/tests/: conftest.py
backend/tests/api/: __init__.py  test_auth.py
docs/: 提案資料_AIプレゼン自動スクリーニング_共同開発のご提案.html  提案資料_AIプレゼン自動スクリーニング_共同開発のご提案.md
frontend/: .eslintrc.json  .prettierrc  Dockerfile.dev  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(buyer)/: layout.tsx
frontend/src/app/supplier/: layout.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/hooks/: use-auth.ts  use-proposals.ts
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/types/: api.ts
(+6 files in other folders)
